<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background_login"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvTitleWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tvNotHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:layout_marginBottom="10dp"
        android:text="@string/dontHaveAcc"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgot"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="125dp"
        android:background="@drawable/button_radius"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/quicksand"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_height="20dp"
        android:background="@drawable/button_radius"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/quicksand"
        android:gravity="center"
        android:text="@string/signUp"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="80dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleWelcome"
        app:startIconDrawable="@drawable/user"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/text_radius"
            android:fontFamily="@font/quicksand"
            android:hint="@string/txtUsername"
            android:textAlignment="center"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/tiUsername"
        app:passwordToggleDrawable="@drawable/eye"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        app:startIconDrawable="@drawable/password"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/text_radius"
            android:fontFamily="@font/quicksand"
            android:hint="@string/txtPassword"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>