<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_signup"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/signUp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUpRegister"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="125dp"
        android:background="@drawable/button_radius"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/quicksand"
        android:gravity="center"
        android:text="@string/signUp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiPhoneRegister" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="80dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/tvSignUp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/text_radius"
            android:fontFamily="@font/quicksand"
            android:hint="@string/txtEmail"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiUsernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiEmailRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/text_radius"
            android:fontFamily="@font/quicksand"
            android:hint="@string/txtUsername"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiUsernameRegister"
        app:passwordToggleDrawable="@drawable/eye"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/text_radius"
            android:fontFamily="@font/quicksand"
            android:hint="@string/txtPassword"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiRePasswordRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:passwordToggleDrawable="@drawable/eye"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiPasswordRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/text_radius"
            android:fontFamily="@font/quicksand"
            android:hint="@string/txtRePass"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiAddressRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiRePasswordRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/text_radius"
            android:fontFamily="@font/quicksand"
            android:hint="@string/txtAddress"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPhoneRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiAddressRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/text_radius"
            android:fontFamily="@font/quicksand"
            android:hint="@string/txtPhone"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvHaveAccountRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/haveAcc"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignInRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUpRegister"
        app:layout_constraintVertical_bias="0.993" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignInRegister"
        android:layout_width="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="16dp"
        android:layout_height="20dp"
        android:background="@drawable/button_radius"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/quicksand"
        android:gravity="center"
        android:text="@string/signIn"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>